TSVPORTAL-231: TSVPORTAL-10905: fixed left navigation to be scrollable if can not fit to screen

--- a/app/styles/_nav.scss
+++ b/app/styles/_nav.scss
@@ -173,7 +173,9 @@ a.navbar-brand {
 }
 
 #left-navigation-epos-configuration {
-
+  .product-version-scrollable {
+    overflow: auto;
+  }
   .navbar {
     position: fixed;
     left: 0px;
